Sun Aug 12 19:12:29 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/chunkid01.s: rename .bss section into
	.bss.riscos.libscl.chunkstub.id01 so that in ld's elf.sc and
	armelf_riscos.sh script we can sort by section name as the
	SharedCLibrary seems to want having the chunk's static data
	blocks in the same order (and without gaps) as the chunk order
	defined by R0 on entry of SWI SharedCLibrary_LibInitAPCS_32.
	* riscos/chunkid02.s: Likewise.

Fri Jul 27 03:10:01 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/stubs.s: Added explanation from Ben Avison on
	kallocExtendsWS.

Mon Jun 18 00:52:00 2007  Peter Naulls  <peter@chocky.org>

	* include/swis.h: Added OS_HeapSort32 and PDriver_ SWIs.

Sun Jun 17 21:51:28 2007  Alex Waugh  <alex@alexwaugh.com>

	* stdio/fdopen.c (fdopen): Implement function.
	* stdio.h: Remove incorrect fileno macro
	* stdio/fileno.c: New file to implement fileno. This allows c++
	fstreams to work.

Mon May 28 08:15:56 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/chunkid01.s: Make _stub_kallocExtendsWS .global.

Mon May 28 03:33:46 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/stubs.s: moved chunks to...
	* riscos/chunkstub.s,riscos/chunkid01.s,riscos/chunkid02,
	riscos/chunkid05.s: ...here.
	* Makefile.am: Follow riscos/stubs.s split.
	* README: Added C++ & float argument in va_args list as known
	problems.

Sun May 27 18:10:24 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/stubs.s: Exported __gcc_vfscanf,__gcc_vscanf and
	__gcc_vsscanf as aliases for vfscanf, vscanf and vsscanf.
	Problem reported by Rob Kendrick.

Wed May 16 20:12:00 2007  Lee Noar  <leenoar@sky.com>

	* include/sys/elf.h: Standard header file defining structures and
	values used in the ELF file format.
	* Makefile.am: Add above file to list of those to install.

Tue Apr 10 19:19:05 2007  Lee Noar  <leenoar@ntlworld.com>

	* gcc-compat/gcc_alloca.c: New file defining __gcc_alloca as a